crates/agui_macros/tests/compile-fail/build_empty.rs
use agui_core::widget::Widget;
use agui_macros::build;

fn main() {
    let _widget: Widget = build! {
        
    };
}
