crates/agui_macros/tests/compile-fail/build_empty.stderr
error: unexpected end of input, expected expression
 --> tests/compile-fail/build_empty.rs:5:27
  |
5 |       let _widget: Widget = build! {
  |  ___________________________^
6 | |
7 | |     };
  | |_____^
  |
  = note: this error originates in the macro `build` (in Nightly builds, run with -Z macro-backtrace for more info)
